src/webapp/framework/fss/css/fss-layout.css
/* ... */
.fl-container-flex39 {width: 39%;}
.fl-container-flex40 {width: 40%;}
.fl-container-flex41 {width: 41%;}
.fl-container-flex42 {width: 42%;}
.fl-container-flex43 {width: 43%;}
.fl-container-flex44 {width: 44%;}
.fl-container-flex45 {width: 45%;}
.fl-container-flex46 {width: 46%;}
.fl-container-flex47 {width: 47%;}
.fl-container-flex48 {width: 48%;}
.fl-container-flex49 {width: 49%;}
.fl-container-flex50 {width: 50%;}
.fl-container-flex51 {width: 51%;}
.fl-container-flex52 {width: 52%;}
.fl-container-flex53 {width: 53%;}
.fl-container-flex54 {width: 54%;}
.fl-container-flex55 {width: 55%;}
.fl-container-flex56 {width: 56%;}
.fl-container-flex57 {width: 57%;}
.fl-container-flex58 {width: 58%;}
.fl-container-flex59 {width: 59%;}
.fl-container-flex60 {width: 60%;}
.fl-container-flex61 {width: 61%;}
.fl-container-flex62 {width: 62%;}
.fl-container-flex63 {width: 63%;}
.fl-container-flex64 {width: 64%;}
.fl-container-flex65 {width: 65%;}
.fl-container-flex66 {width: 66%;}
.fl-container-flex67 {width: 67%;}
.fl-container-flex68 {width: 68%;}
.fl-container-flex69 {width: 69%;}
.fl-container-flex70 {width: 70%;}
.fl-container-flex71 {width: 71%;}
.fl-container-flex72 {width: 72%;}
.fl-container-flex73 {width: 73%;}
.fl-container-flex74 {width: 74%;}
.fl-container-flex75 {width: 75%;}
.fl-container-flex76 {width: 76%;}
.fl-container-flex77 {width: 77%;}
.fl-container-flex78 {width: 78%;}
.fl-container-flex79 {width: 79%;}
.fl-container-flex80 {width: 80%;}
.fl-container-flex81 {width: 81%;}
.fl-container-flex82 {width: 82%;}
.fl-container-flex83 {width: 83%;}
.fl-container-flex84 {width: 84%;}
.fl-container-flex85 {width: 85%;}
.fl-container-flex86 {width: 86%;}
.fl-container-flex87 {width: 87%;}
.fl-container-flex88 {width: 88%;}
.fl-container-flex89 {width: 89%;}
.fl-container-flex90 {width: 90%;}
.fl-container-flex91 {width: 91%;}
.fl-container-flex92 {width: 92%;}
.fl-container-flex93 {width: 93%;}
.fl-container-flex94 {width: 94%;}
.fl-container-flex95 {width: 95%;}
.fl-container-flex96 {width: 96%;}
.fl-container-flex97 {width: 97%;}
.fl-container-flex98 {width: 98%;}
.fl-container-flex99 {width: 99%;}

/* 
 * Linearizes, !importants override specificity 
 */
.fl-layout-linear * {
    clear: both !important; 
    float:none !important;
    margin-left:0 !important;
    margin-right:0 !important;
    overflow:visible !important;  	/* no scroll bars, backwards compat with 1.3.1 */
}

/* Override inline elements */
.fl-layout-linear .fl-force-left, 
.fl-layout-linear .fl-force-right,
.fl-layout-linear .fl-col {
	display:block !important; 
}

/* 
 * Makes all block elements uniform width
 */
.fl-layout-linear.fl-layout-width-100 div,
.fl-layout-linear.fl-layout-width-100 table,
.fl-layout-linear.fl-layout-width-100 h1, .fl-layout-linear.fl-layout-width-100 h2, .fl-layout-linear.fl-layout-width-100 h3, .fl-layout-linear.fl-layout-width-100 h4, .fl-layout-linear.fl-layout-width-100 h5,
.fl-layout-linear.fl-layout-width-100 p {
    width: 100% !important; 
	max-width: 960px;
	min-width: 560px;
}

/* Deprecated */
.fl-layout-linearEnabled { width:100% !important; display:block;} 

/*
 * Aligns all contents of a container. Best practice for linear layouts.
 */
.fl-layout-align-left * {
    text-align:left !important;
}
.fl-layout-align-right * {
    text-align:right !important;
}
.fl-layout-align-center * {
    margin-left: auto;
    margin-right:auto;
}

/*
Layout Helpers
=============================================
*/
/* Columns: A quick column grid system */
/* Flex width columns (containers with margins and padding) */
.fl-col-justified {float:left; display:inline; overflow:auto; text-align:justify;} /* redundant: text alignment now in fluid.text.css */

.fl-col-flex2, .fl-col-flex3, .fl-col-flex4, .fl-col-flex5 {overflow:auto; zoom:1;}
.fl-col {float:left; display:inline;}
.fl-col-flex5 .fl-col {width:18.95%; margin-left:0.25%;margin-right:0.25%; padding-left:0.25%; padding-right:0.25%}
.fl-col-flex4 .fl-col {width:24%; margin-left:0.25%;margin-right:0.25%; padding-left:0.25%; padding-right:0.25%}
.fl-col-flex3 .fl-col {width:32.33%; margin-left:0.25%;margin-right:0.25%; padding-left:0.25%; padding-right:0.25%}
.fl-col-flex2 .fl-col {width:48.85%; margin-left:0.25%;margin-right:0.25%; padding-left:0.25%; padding-right:0.25%}

/* CHANGE TO LAYOUT not COL since this will become a layout helper */
.fl-col-mixed,
.fl-col-mixed2,
.fl-col-mixed3 {overflow:auto; zoom:1;}

/* Old System */
.fl-col-mixed .fl-col-side {width:200px;}
.fl-col-mixed .fl-col-side, 
.fl-col-mixed .fl-col-main {padding:0 10px;}

.fl-col-mixed2 .fl-col-side {width:200px; padding:0 10px; float:left;}
.fl-col-mixed2 .fl-col-main {margin-left:220px; padding:0 10px;} /* margin goes on whichever side the fixed column goes */

.fl-col-mixed3 .fl-col-main {margin:0 220px;} /* margin goes on whichever side the fixed column goes */

/* New System, requires fl-force-XX on the fixed column, provides some basic numbers to start with */
.fl-col-fixed, .fl-col-flex {padding:0 10px;}

.fl-col-mixed .fl-col-fixed {width:200px; padding:0 10px;}
.fl-col-mixed .fl-col-flex {margin-left:220px; padding:0 10px;}

.fl-col-mixed-100 .fl-col-fixed {width:100px;}
.fl-col-mixed-100 .fl-col-flex {margin-left:120px;}

.fl-col-mixed-150 .fl-col-fixed {width:150px;}
.fl-col-mixed-150 .fl-col-flex {margin-left:170px;}

.fl-col-mixed-200 .fl-col-fixed {width:200px;}
.fl-col-mixed-200 .fl-col-flex {margin-left:220px;}

.fl-col-mixed-250 .fl-col-fixed {width:250px;}
.fl-col-mixed-250 .fl-col-flex {margin-left:270px;}

.fl-col-mixed-300 .fl-col-fixed {width:300px;}
.fl-col-mixed-300 .fl-col-flex {margin-left:320px;}


/*
 * Tabs: a quick tab system
 * Dependency: list-based markup ?
 */
.fl-tabs {margin:10px 0 0 0; border-bottom:1px solid #000; text-align:center; padding-bottom:2px;}
.fl-tabs li {list-style-type:none; display:inline;}
/* ... */

